testsuite/tests/module/mod73.stderr

mod73.hs:3:7: error:
    Not in scope: ‘Prelude.g’
    NB: the module ‘Prelude’ does not export ‘g’.
    Suggested fix:
      Perhaps use one of these:
        data constructor ‘Prelude.EQ’ (imported from Prelude),
        data constructor ‘Prelude.GT’ (imported from Prelude),
        data constructor ‘Prelude.LT’ (imported from Prelude)
